[workspace]
members = [
    "universal/io",
    "universal/raw-vaas",
    "solana/vaas",
    "solana/consts",
    "solana/utils"
]
resolver = "2"

[workspace.package]
version = "0.2.0-alpha.10"
edition = "2021"
authors = ["Wormhole Contributors"]
license = "Apache-2.0"
homepage = "https://github.com/wormhole-foundation/wormhole-sdk-rs"
repository = "https://github.com/wormhole-foundation/wormhole-sdk-rs"
rust-version = "1.68"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
hex-literal = "0.4.1"
cfg-if = "1.0.0"

### Solana related
solana-program = "1.16.27"
borsh = "0.10.3"
anchor-lang = ">=0.28.0,<0.30.0"

serde = "1.0.171"
serde_json = "1.0.103"

wormhole-io = { path = "universal/io" }
wormhole-raw-vaas = { path = "universal/raw-vaas", version = "0.2.0-alpha.2" }
wormhole-solana-consts = { path = "solana/consts", version = "0.2.0-alpha.2" }
