[package]
name = "wormhole-explorer-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
async-trait = "0.1.72"
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0.44"

wormhole-vaas = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "test-util"] }
