[package]
name = "raw-vaas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruint = { version = "=1.8.0", optional = true }
anchor-lang = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }

[features]
default =["off-chain", "ruint"]
ruint = ["dep:ruint"]
off-chain = ["dep:alloy-primitives"]
anchor = ["dep:anchor-lang"]


