[package]
name = "wormhole-raw-vaas"
description = "Zero-copy deserialization of Wormhole VAAs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anchor-lang = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }

ruint = { version = "=1.8", default-features = false, optional = true }
ruint-macro = { version = "=1.0.2", optional = true }

[features]
default =["off-chain", "ruint"]
ruint = ["dep:ruint", "dep:ruint-macro"]
off-chain = ["dep:alloy-primitives", "ruint"]
on-chain = []
anchor = ["dep:anchor-lang", "ruint", "on-chain"]


