[package]
name = "wormhole-raw-vaas"
description = "Zero-copy deserialization of Wormhole VAAs"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

alloy-primitives = { workspace = true, optional = true }

ruint = { version = "1.8", default-features = false, optional = true }
ruint-macro = { version = "1.0.2", optional = true }

[dev-dependencies]
hex-literal.workspace = true

[features]
default = ["off-chain"]
ruint = ["dep:ruint", "dep:ruint-macro"]
off-chain = ["dep:alloy-primitives"]
on-chain = []


