[package]
name = "wormhole-vaas"
version = "0.1.0"
edition = "2021"
description = "Serialization/deserialization of Wormhole VAAs"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
hex-literal.workspace = true

anchor-lang = { workspace = true, optional = true }
serde = { version = "1.0.171", optional = true, features = ["derive"] }
schemars = { version = "0.8.12", optional = true }

[dev-dependencies]
serde_json = "1.0.103"

[features]
default = []
anchor = ["anchor-lang"]
serde = ["dep:serde", "alloy-primitives/serde"]
