[package]
name = "wormhole-vaas"
description = "Serialization/deserialization of Wormhole VAAs"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
hex-literal.workspace = true

# anchor
anchor-lang = { workspace = true, optional = true }

serde = {workspace = true, optional = true, features = ["derive"]}
serde_json = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = []
anchor = ["anchor-lang"]
serde = ["dep:serde", "dep:serde_json", "alloy-primitives/serde"]
