[package]
name = "wormhole-vaas"
description = "Serialization/deserialization of Wormhole VAAs"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives = { workspace = true, optional = true }
hex-literal.workspace = true

# anchor
anchor-lang = { workspace = true, optional = true }
derive_more = { version = "0.99", optional = true }
ruint = { version = "1.8.0", optional = true }

serde = {workspace = true, optional = true, features = ["derive"]}
serde_json = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["payloads"]
read-write = []
payloads = ["read-write", "dep:alloy-primitives"]
anchor = ["anchor-lang", "dep:ruint", "dep:derive_more"]
serde = ["dep:serde", "dep:serde_json", "alloy-primitives/serde"]
