[package]
name = "wormhole-solana-consts"
description = "Wormhole-relevant constant values used on Solana"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mainnet = []
testnet = []
localnet = []

[dependencies]
solana-program.workspace = true
cfg-if.workspace = true