[package]
name = "wormhole-solana-utils"
description = "Utilities for Solana"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
anchor = ["dep:anchor-lang"]

[dependencies]
solana-program.workspace = true
cfg-if.workspace = true

### For anchor feature
anchor-lang = { optional = true, workspace = true }
