[package]
name = "wormhole-solana-vaas"
description = "Zero-copy deserialization of Wormhole VAA Accounts"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
experimental = []

[dependencies]
wormhole-raw-vaas.workspace = true
solana-program.workspace = true
borsh.workspace = true