[package]
name = "wormhole-solana-vaas"
description = "Borsh schemas and zero-copy deserialization of Wormhole VAA Accounts"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mainnet = ["wormhole-solana-consts/mainnet"]
testnet = ["wormhole-solana-consts/testnet"]
localnet = ["wormhole-solana-consts/localnet"]
encoded-vaa = []

[dependencies]
wormhole-raw-vaas.workspace = true
wormhole-solana-consts.workspace = true
solana-program.workspace = true
borsh.workspace = true