[package]
name = "wormhole-raw-vaas"
description = "Zero-copy deserialization of Wormhole VAAs"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruint = { version = "1.9.0", default-features = false, optional = true }
ruint-macro = { version = "1.1.0", optional = true }

[dev-dependencies]
hex-literal.workspace = true

[features]
ruint = ["dep:ruint", "dep:ruint-macro"]


