[package]
name = "wormhole-vaas"
description = "Serialization/deserialization of Wormhole VAAs"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wormhole-io = { workspace = true, features = ["alloy"] }

alloy-primitives.workspace = true
hex-literal.workspace = true

serde = {workspace = true, optional = true, features = ["derive"]}
serde_json = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "alloy-primitives/serde"]
